# EmotiBit_Brainflow_SpO2_Algorithm

./: .gitignore  README.md
pybind/: CMakeLists.txt  README  README.md  bindings.cpp  run.py
src/: BrainflowSpO2Algorithm.cpp  BrainflowSpO2Algorithm.h  Emotibit_Brainflow_SpO2_Algorithm.cpp  Emotibit_Brainflow_SpO2_Algorithm.h
tests/simulated-unobstructed-airway_v0.0.0/ip900ap/: README.md  generated.csv
tests/sit-stand-sit_v0.0.0/ip900ap/: EmotiBit.csv  generated.csv  instructions.md
